// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 2b17dc2e33c2b29565e0100bef5375b534a394425ba9c4b43d773bf5f2fb74fa 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "2b17dc2e33c2b29565e0100bef5375b534a394425ba9c4b43d773bf5f2fb74fa",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = b0221f25b761b9678b8970ab96f595d592fae4fcea4b6b2ef66ee80a5b7e3fa0 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "b0221f25b761b9678b8970ab96f595d592fae4fcea4b6b2ef66ee80a5b7e3fa0",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 294da52b3473c469b941cbfe3badc472175af966e0f09bb52ddebd1fd8afafb5 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "294da52b3473c469b941cbfe3badc472175af966e0f09bb52ddebd1fd8afafb5",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 9338b3425875e5725f9c958ddd5c5ad4f08da3d2d76f78bdd357f8efec0318d0 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "9338b3425875e5725f9c958ddd5c5ad4f08da3d2d76f78bdd357f8efec0318d0",
    "io": {
      "i": {
        "country": undefined,
        "from": undefined,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 57fd31d908ad7978ccaedbbfe4f3248bedab7d302374a5f017aa290e167147bc 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "57fd31d908ad7978ccaedbbfe4f3248bedab7d302374a5f017aa290e167147bc",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = 3bf5cb403a05df5b680bcb0a855d2a792e069f0b232675b4f6cd943f8a52092d 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "3bf5cb403a05df5b680bcb0a855d2a792e069f0b232675b4f6cd943f8a52092d",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = dfc9a1bce9044fc7da55597352cc6d6e755d62924e6bf0952db97ff8eb1dc6f4 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "dfc9a1bce9044fc7da55597352cc6d6e755d62924e6bf0952db97ff8eb1dc6f4",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 97dd0f4154cf2c28b3f5f21f6ca7883530568c12e6ae9bc55e5dfcf29f2d7fba 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "97dd0f4154cf2c28b3f5f21f6ca7883530568c12e6ae9bc55e5dfcf29f2d7fba",
    "io": {
      "i": {
        "country": undefined,
        "from": undefined,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 6bcad013d5beb076c8f329567b7e26b22153b06669be6c8bd3ee36cac7581571 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "6bcad013d5beb076c8f329567b7e26b22153b06669be6c8bd3ee36cac7581571",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = 9dd0b8597e5e797ae568c83dfd4e0890ae39c70eb0c604ffe7df07cc78371515 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "9dd0b8597e5e797ae568c83dfd4e0890ae39c70eb0c604ffe7df07cc78371515",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 61060ccc2e3553d242f828b2265aee9487ba99e0ccace998436a5b4b2ed79215 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "61060ccc2e3553d242f828b2265aee9487ba99e0ccace998436a5b4b2ed79215",
    "io": {
      "i": {
        "country": "AF",
        "from": "2022-07-14",
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = d2bf11008dacc2c91fbcee3faf4b762aca552b84172407ffd0ae5f9d1977a526 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "d2bf11008dacc2c91fbcee3faf4b762aca552b84172407ffd0ae5f9d1977a526",
    "io": {
      "i": {
        "country": undefined,
        "from": undefined,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;
